--- a/sdk/android/BUILD.gn
+++ b/sdk/android/BUILD.gn
@@ -86,8 +86,8 @@ if (is_android) {
       ":surfaceviewrenderer_java",
       ":video_api_java",
       ":video_java",
-      "../../modules/audio_device:audio_device_java",
-      "../../rtc_base:base_java",
+      "//modules/audio_device:audio_device_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -202,7 +202,7 @@ if (is_android) {
     ]
 
     deps = [
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -211,7 +211,7 @@ if (is_android) {
 
     deps = [
       ":base_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -231,7 +231,7 @@ if (is_android) {
 
     deps = [
       ":base_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -268,7 +268,7 @@ if (is_android) {
     deps = [
       ":base_java",
       ":video_api_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -323,8 +323,8 @@ if (is_android) {
       ":swcodecs_java",
       ":video_api_java",
       ":video_java",
-      "../../modules/audio_device:audio_device_java",
-      "../../rtc_base:base_java",
+      "//modules/audio_device:audio_device_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -349,7 +349,7 @@ if (is_android) {
       ":base_java",
       ":video_api_java",
       ":video_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -377,13 +377,12 @@ if (is_android) {
       ":base_java",
       ":video_api_java",
       ":video_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
   rtc_android_library("hwcodecs_java") {
     java_files = [
-      "api/org/webrtc/VideoCapabilityParser.java",
       "api/org/webrtc/HardwareVideoDecoderFactory.java",
       "api/org/webrtc/HardwareVideoEncoderFactory.java",
       "src/java/org/webrtc/BaseBitrateAdjuster.java",
@@ -404,7 +403,7 @@ if (is_android) {
       ":base_java",
       ":video_api_java",
       ":video_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -422,7 +421,7 @@ if (is_android) {
     deps = [
       ":audio_api_java",
       ":base_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -432,7 +431,7 @@ if (is_android) {
     deps = [
       ":video_api_java",
       ":video_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -445,7 +444,7 @@ if (is_android) {
     deps = [
       ":video_api_java",
       ":video_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -463,7 +462,7 @@ if (is_android) {
       ":base_java",
       ":video_api_java",
       ":video_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -715,8 +714,8 @@ if (is_android) {
       ":generated_external_classes_jni",
       ":generated_native_api_jni",
       ":internal_jni",
-      "../../rtc_base:checks",
-      "../../rtc_base:rtc_base_approved",
+      "//rtc_base:checks",
+      "//rtc_base:rtc_base_approved",
       "//third_party/abseil-cpp/absl/types:optional",
     ]
   }
@@ -733,8 +732,8 @@ if (is_android) {
     deps = [
       ":base_jni",
       ":native_api_jni",
-      "../../rtc_base:checks",
-      "../../rtc_base:rtc_base",
+      "//rtc_base:checks",
+      "//rtc_base:rtc_base",
       "//third_party/abseil-cpp/absl/memory",
     ]
   }
@@ -782,9 +781,9 @@ if (is_android) {
       ":base_jni",
       ":native_api_jni",
       ":video_jni",
-      "../../api/video_codecs:video_codecs_api",
-      "../../rtc_base:checks",
-      "../../rtc_base:rtc_base_approved",
+      "//api/video_codecs:video_codecs_api",
+      "//rtc_base:checks",
+      "//rtc_base:rtc_base_approved",
       "//third_party/abseil-cpp/absl/memory",
     ]
   }
@@ -803,9 +802,9 @@ if (is_android) {
     deps = [
       ":base_jni",
       ":peerconnection_jni",
-      "../../api:libjingle_peerconnection_api",
-      "../../api/video_codecs:video_codecs_api",
-      "../../rtc_base:rtc_base",
+      "//api:libjingle_peerconnection_api",
+      "//api/video_codecs:video_codecs_api",
+      "//rtc_base:rtc_base",
     ]
   }
 
@@ -827,9 +826,9 @@ if (is_android) {
       ":native_api_jni",
       ":video_jni",
       ":videoframe_jni",
-      "../../api:libjingle_peerconnection_api",
-      "../../api/video:video_frame",
-      "../../rtc_base:rtc_base_approved",
+      "//api:libjingle_peerconnection_api",
+      "//api/video:video_frame",
+      "//rtc_base:rtc_base_approved",
       "//third_party/abseil-cpp/absl/memory",
     ]
   }
@@ -843,7 +842,7 @@ if (is_android) {
 
     deps = [
       ":base_java",
-      "../../rtc_base:base_java",
+      "//rtc_base:base_java",
     ]
   }
 
@@ -1290,8 +1289,8 @@ if (is_android) {
         ":libjingle_peerconnection_metrics_default_java",
         ":video_api_java",
         ":video_java",
-        "../../base:base_java_test_support",
-        "../../rtc_base:base_java",
+        "//base:base_java_test_support",
+        "//rtc_base:base_java",
         "//third_party/android_support_test_runner:rules_java",
         "//third_party/android_support_test_runner:runner_java",
         "//third_party/junit",
@@ -1372,21 +1371,21 @@ if (is_android) {
       ":opensles_audio_device_module",
       ":video_jni",
       "../../system_wrappers:system_wrappers",
-      "../../api/audio_codecs:builtin_audio_decoder_factory",
-      "../../api/audio_codecs:builtin_audio_encoder_factory",
-      "../../api/video:video_frame",
-      "../../media:rtc_audio_video",
-      "../../media:rtc_internal_video_codecs",
-      "../../media:rtc_media_base",
-      "../../modules/audio_device:audio_device",
-      "../../modules/audio_device:mock_audio_device",
-      "../../modules/audio_processing:audio_processing",
-      "../../modules/utility:utility",
-      "../../pc:libjingle_peerconnection",
-      "../../rtc_base:checks",
-      "../../rtc_base:rtc_base_approved",
-      "../../test:fileutils",
-      "../../test:test_support",
+      "//api/audio_codecs:builtin_audio_decoder_factory",
+      "//api/audio_codecs:builtin_audio_encoder_factory",
+      "//api/video:video_frame",
+      "//media:rtc_audio_video",
+      "//media:rtc_internal_video_codecs",
+      "//media:rtc_media_base",
+      "//modules/audio_device:audio_device",
+      "//modules/audio_device:mock_audio_device",
+      "//modules/audio_processing:audio_processing",
+      "//modules/utility:utility",
+      "//pc:libjingle_peerconnection",
+      "//rtc_base:checks",
+      "//rtc_base:rtc_base_approved",
+      "//test:fileutils",
+      "//test:test_support",
       "//testing/gtest",
       "//third_party/abseil-cpp/absl/memory",
     ]
